corpus/net_declaration.txt
============================================
net declaration
============================================

module mod ();
  wire a;
endmodule

----

(source_file
  (module_declaration
    (module_header
      (module_keyword)
      (module_identifier (_module_identifier (simple_identifier)))
    )
    (module_nonansi_header (list_of_ports))
    (module_or_generate_item (net_declaration
      (net_type)
      (list_of_net_decl_assignments (net_decl_assignment (net_identifier (_net_identifier (simple_identifier)))))
    ))
  )
)

============================================
nets declaration
============================================

module mod ();
  wire a, b, c;
  wire ddd;
  reg ee;
  logic [3:0] fff;
endmodule

----

(source_file
  (module_declaration
    (module_header
      (module_keyword)
      (module_identifier (_module_identifier (simple_identifier)))
    )
    (module_nonansi_header (list_of_ports))
    (module_or_generate_item (net_declaration
      (net_type)
      (list_of_net_decl_assignments
        (net_decl_assignment (net_identifier (_net_identifier (simple_identifier))))
        (net_decl_assignment (net_identifier (_net_identifier (simple_identifier))))
        (net_decl_assignment (net_identifier (_net_identifier (simple_identifier))))
      )
    ))
    (module_or_generate_item (net_declaration
      (net_type)
      (list_of_net_decl_assignments
        (net_decl_assignment (net_identifier (_net_identifier (simple_identifier))))
      )
    ))
    (module_or_generate_item (data_declaration
      (data_type (integer_vector_type))
      (list_of_variable_decl_assignments
        (variable_decl_assignment (variable_identifier (_variable_identifier (simple_identifier))))
      )
    ))
    (module_or_generate_item (data_declaration
      (data_type (integer_vector_type)
        (packed_dimension (constant_range
          (number (integral_number))
          (constant_expression (constant_primary (primary_literal (number (integral_number)))))
        ))
      )
      (list_of_variable_decl_assignments
        (variable_decl_assignment (variable_identifier (_variable_identifier (simple_identifier))))
      )
    ))
  )
)
